// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuildSidebar Should render with data 1`] = `
<div>
   
  <div
    class="sc-hKgJUU sc-jrAFXE dpFBPj bpvGuP"
    data-testid="sidebar"
  >
    <div
      class="sc-hKgJUU sc-kEjbQP dpFBPj cRRMyT"
    >
      <div
        class="sc-iqHYmW iUGSbK"
      >
        <div
          class="sc-crrszt dIDZpl"
        >
          <img
            alt="Test Guild"
            class="sc-dQoVA ilMvDn"
            src="dxdao-icon.svg"
          />
          <h1
            class="sc-pGacB sc-bqyKOL eGiNre cNYkRs"
            size="2"
          >
            Test Guild
          </h1>
        </div>
        <div
          class="sc-hKgJUU sc-kstqJO dpFBPj bRViTh"
        >
          members
        </div>
      </div>
    </div>
    <div
      class="sc-hKgJUU sc-iBPTik sc-hBEYId dpFBPj gNOIKi FxpuI"
    >
      <a
        class="sc-bdfBQB hcWJCy"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2"
      >
        <a
          class="sc-fubCzh sc-fodVek jNJQkj jOCCIN"
        >
          governance
        </a>
      </a>
      <a
        class="sc-bdfBQB hcWJCy"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2/allproposals"
      >
        <a
          class="sc-fubCzh sc-fodVek jNJQkj jOCCIN"
          href="#"
        >
          proposals_all
        </a>
      </a>
      <a
        class="sc-fubCzh sc-fodVek jNJQkj jOCCIN"
        href="#"
      >
        settings
      </a>
    </div>
  </div>
   
</div>
`;

exports[`GuildSidebar Should render without data 1`] = `
<div>
   
  <div
    class="sc-hKgJUU sc-jrAFXE dpFBPj bpvGuP"
    data-testid="sidebar"
  >
    <div
      class="sc-hKgJUU sc-kEjbQP dpFBPj cRRMyT"
    >
      <div
        class="sc-iqHYmW iUGSbK"
      >
        <div
          class="sc-crrszt dIDZpl"
        >
          <img
            class="sc-dQoVA ilMvDn"
            src="dxdao-icon.svg"
          />
          <h1
            class="sc-pGacB sc-bqyKOL eGiNre cNYkRs"
            size="2"
          >
            <div
              class="sc-gsTEea"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </h1>
        </div>
        <div
          class="sc-hKgJUU sc-kstqJO dpFBPj bRViTh"
        >
          <div
            class="sc-gsTEea"
          >
            <span
              aria-busy="true"
              aria-live="polite"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-hKgJUU sc-iBPTik sc-hBEYId dpFBPj gNOIKi FxpuI"
    >
      <a
        class="sc-bdfBQB hcWJCy"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2"
      >
        <a
          class="sc-fubCzh sc-fodVek jNJQkj jOCCIN"
        >
          governance
        </a>
      </a>
      <a
        class="sc-bdfBQB hcWJCy"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2/allproposals"
      >
        <a
          class="sc-fubCzh sc-fodVek jNJQkj jOCCIN"
          href="#"
        >
          proposals_all
        </a>
      </a>
      <a
        class="sc-fubCzh sc-fodVek jNJQkj jOCCIN"
        href="#"
      >
        settings
      </a>
    </div>
  </div>
   
</div>
`;
